examples/errors/parsing/type-params-empty-body.cn
type Foo(a) = { }

main : () [impure] = ()
